--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,9 +20,15 @@ html {
 .logo-svg {
   transition: fill 0.3s ease;
 }
+.logoo-svg {
+  transition: fill 0.3s ease;
+}
 
 .main-logo:hover .logo-svg {
   fill: #84a98c; /* لون جديد عند التحويم */
+}
+.main-logoo:hover .logoo-svg {
+  fill: #cad2c5; /* لون جديد عند التحويم */
 }
 .file-input {
   background-color: #cad2c5 !important;
