--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,10 @@ html {
   color: #2f3e46 !important;
   font-weight: 500;
 }
+.react-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
